--- a/src/Akeneo/Bundle/BatchBundle/Resources/config/services.yml
+++ b/src/Akeneo/Bundle/BatchBundle/Resources/config/services.yml
@@ -1,6 +1,7 @@
 parameters:
     akeneo_batch.job_instance_factory.class:                  Akeneo\Bundle\BatchBundle\Job\JobInstanceFactory
     akeneo_batch.logger_subscriber.class:                     Akeneo\Bundle\BatchBundle\EventListener\LoggerSubscriber
+    akeneo_batch.working_directory_subscriber.class:          Akeneo\Bundle\BatchBundle\EventListener\WorkingDirectorySubscriber
     akeneo_batch.notification_subscriber.class:               Akeneo\Bundle\BatchBundle\EventListener\NotificationSubscriber
     akeneo_batch.logger.batch_log_handler.class:              Akeneo\Bundle\BatchBundle\Monolog\Handler\BatchLogHandler
     akeneo_batch.mail_notifier.class:                         Akeneo\Bundle\BatchBundle\Notification\MailNotifier
@@ -24,6 +25,13 @@ services:
         tags:
             - { name: kernel.event_subscriber }
             - { name: monolog.logger, channel: batch }
+
+    akeneo_batch.working_directory_subscriber:
+        class: '%akeneo_batch.working_directory_subscriber.class%'
+        arguments:
+            - '@akeneo_batch.job.job_registry'
+        tags:
+            - { name: kernel.event_subscriber }
 
     akeneo_batch.notification_subscriber:
         class: '%akeneo_batch.notification_subscriber.class%'
