--- a/src/Pim/Bundle/ImportExportBundle/Resources/config/view_elements/job_profile.yml
+++ b/src/Pim/Bundle/ImportExportBundle/Resources/config/view_elements/job_profile.yml
@@ -11,6 +11,8 @@ services:
        arguments:
            - 'pim_import_export.job_profile.tab.property'
            - '%pim_import_export.view_element.job_profile.tab.property_show.template%'
+       calls:
+           - [ addVisibilityChecker, ['@pim_enrich.view_element.visibility_checker.acl', {acl: 'pim_importexport_import_profile_show'}] ]
        tags:
            - { name: pim_enrich.view_element, type: pim_import_export_jobInstance.import, position: 90 }
 
@@ -29,6 +31,8 @@ services:
        arguments:
            - 'pim_import_export.job_profile.tab.property'
            - '%pim_import_export.view_element.job_profile.tab.property_edit.template%'
+       calls:
+           - [ addVisibilityChecker, ['@pim_enrich.view_element.visibility_checker.acl', {acl: 'pim_importexport_import_profile_edit'}] ]
        tags:
            - { name: pim_enrich.view_element, type: pim_import_export_jobInstance.import.form_tab, position: 90 }
 
@@ -48,6 +52,8 @@ services:
        arguments:
            - 'pim_import_export.job_profile.tab.property'
            - '%pim_import_export.view_element.job_profile.tab.property_show.template%'
+       calls:
+           - [ addVisibilityChecker, ['@pim_enrich.view_element.visibility_checker.acl', {acl: 'pim_importexport_export_profile_properties_show'}] ]
        tags:
            - { name: pim_enrich.view_element, type: pim_import_export_jobInstance.export, position: 90 }
 
@@ -57,6 +63,7 @@ services:
            - 'pim_import_export.job_profile.tab.job_content'
            - '%pim_import_export.view_element.job_profile.tab.job_content.template%'
        calls:
+           - [ addVisibilityChecker, ['@pim_enrich.view_element.visibility_checker.acl', {acl: 'pim_importexport_export_profile_content_show'}] ]
            - [ addVisibilityChecker, ['@pim_import_export.view_element.visibility_checker.job_name', {job_names: ['csv_product_export', 'csv_published_product_export', 'xlsx_product_export', 'xlsx_published_product_export']}] ]
        tags:
            - { name: pim_enrich.view_element, type: pim_import_export_jobInstance.export, position: 100 }
@@ -76,6 +83,8 @@ services:
        arguments:
            - 'pim_import_export.job_profile.tab.property'
            - '%pim_import_export.view_element.job_profile.tab.property_edit.template%'
+       calls:
+           - [ addVisibilityChecker, ['@pim_enrich.view_element.visibility_checker.acl', {acl: 'pim_importexport_export_profile_properties_edit'}] ]
        tags:
            - { name: pim_enrich.view_element, type: pim_import_export_jobInstance.export.form_tab, position: 90 }
 
@@ -86,6 +95,7 @@ services:
            - 'pim_import_export.job_profile.tab.job_content'
            - '%pim_import_export.view_element.job_profile.tab.job_content.template%'
        calls:
+           - [ addVisibilityChecker, ['@pim_enrich.view_element.visibility_checker.acl', {acl: 'pim_importexport_export_profile_content_edit'}] ]
            - [ addVisibilityChecker, ['@pim_import_export.view_element.visibility_checker.job_name', {job_names: ['csv_product_export', 'csv_published_product_export', 'xlsx_product_export', 'xlsx_published_product_export']}] ]
        tags:
            - { name: pim_enrich.view_element, type: pim_import_export_jobInstance.export.form_tab, position: 100 }
