--- a/src/Pim/Bundle/ImportExportBundle/Resources/config/acl.yml
+++ b/src/Pim/Bundle/ImportExportBundle/Resources/config/acl.yml
@@ -7,13 +7,13 @@ pim_importexport_export_profile_create:
     type: action
     label: pim_importexport.acl.export_profile.create
     group_name: pim_importexport.acl_group.export
-pim_importexport_export_profile_properties_show:
+pim_importexport_export_profile_show:
     type: action
-    label: pim_importexport.acl.export_profile.properties_show
+    label: pim_importexport.acl.export_profile.show
     group_name: pim_importexport.acl_group.export
-pim_importexport_export_profile_properties_edit:
+pim_importexport_export_profile_edit:
     type: action
-    label: pim_importexport.acl.export_profile.properties_edit
+    label: pim_importexport.acl.export_profile.edit
     group_name: pim_importexport.acl_group.export
 pim_importexport_export_profile_remove:
     type: action
@@ -22,6 +22,14 @@ pim_importexport_export_profile_remove:
 pim_importexport_export_profile_launch:
     type: action
     label: pim_importexport.acl.export_profile.launch
+    group_name: pim_importexport.acl_group.export
+pim_importexport_export_profile_property_show:
+    type: action
+    label: pim_importexport.acl.export_profile.property_show
+    group_name: pim_importexport.acl_group.export
+pim_importexport_export_profile_property_edit:
+    type: action
+    label: pim_importexport.acl.export_profile.property_edit
     group_name: pim_importexport.acl_group.export
 pim_importexport_export_profile_history:
     type: action
