PIM-5902: fix validation

--- a/src/Pim/Bundle/CatalogBundle/Resources/config/helpers.yml
+++ b/src/Pim/Bundle/CatalogBundle/Resources/config/helpers.yml
@@ -1,6 +1,6 @@
 parameters:
     pim_catalog.helper.locale.class: Pim\Bundle\CatalogBundle\Helper\LocaleHelper
-    pim_catalog.helper.exception_translation_provider.class: Pim\Bundle\CatalogBundle\ExceptionTranslationProvider
+    pim_catalog.helper.exception.exception_translation_provider.class: Pim\Bundle\CatalogBundle\Exception\ExceptionTranslationProvider
 
 services:
     # Locale helper
@@ -10,7 +10,7 @@ services:
             - '@pim_user.context.user'
             - '@pim_catalog.repository.locale'
 
-    pim_catalog.helper.exception_translation_provider:
-        class: '%pim_catalog.helper.exception_translation_provider.class%'
+    pim_catalog.helper.exception.exception_translation_provider:
+        class: '%pim_catalog.helper.exception.exception_translation_provider.class%'
         arguments:
             - '@translator'
